# blog

./: .ackrc  .gitignore  index.html  package-lock.json  package.json  pelicanconf.py  pyproject.toml  start  vite.config.ts
content/: a-vision-for-nostr.md  pow-and-micropayments.md  what-nostr-is-bad-at.md
my-themes/hyde/static/css/: hyde.css
src/: App.svelte  app.css
src/lib/: Post.svelte  PostItem.svelte
